# qgc

./: AccountUpdate.qml  BasicParameters.qml  BasicParametersList.qml  BasicParamters.qml  BasicParamtersList.qml  CMakeLists.txt  CMakeLists.txt.user.86645aa  CMakeLists.txt.user.9d421d4  Communication.qml  MainRootIcons.qml  Makefile.save  MapGlobals.qml  MissionExpand.qml  MissionExpand_BACKUP_1451.qml  Newscreen.qml  ProfileScreenNew.qml  Profilepage.qml  diff.txt  diff_ascii.txt  diff_log.txt  fix_geofence.py  flag_search.txt  newscreen.qml  out.txt  profilepage.qml  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc  replace.py  replace2.py  save_search.txt  scratch_old_missionexpand.qml.bak  status.txt
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/: AndroidInterface.h
cmake/: CustomOptions.cmake
cmake/find-modules/: FindGStreamer.cmake
custom-example/: qgcimages.qrc  qgroundcontrol.qrc
custom-example/src/: CustomPlugin.cc
resources/MapIcons/: map_default.b64  map_hybrid.b64  map_satellite.b64  map_terrain.b64
src/: CMakeLists.txt  QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h  bluetooth_demo.cpp  bluetooth_demo.h  last_lines.txt  main.cc
src/ADSB/: CMakeLists.txt
src/API/: QGCCorePlugin.cc  QGCCorePlugin.h
src/Airspace/: ARCHITECTURE.txt  AirspaceManager.cc  AirspaceManager.h  AirspaceRestrictionValidator.cc  AirspaceRestrictionValidator.h  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  sample_data_delhi.json
src/AnalyzeView/: CMakeLists.txt
src/Bluetooth_class/: bluetooth_class.cpp  bluetooth_class.h
src/Comms/: BluetoothLink.cc  BluetoothLink.h  CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkManager.cc  LinkManager.h  MAVLinkProtocol.cc  SerialLink.h  TCPLink.h  UDPLink.h
src/FactSystem/: ParameterManager.h
src/FirmwarePlugin/: FirmwarePlugin.cc  FirmwarePlugin.h
src/FlightDisplay/: FlightDisplayViewVideo.qml  FlyView.qml  FlyViewBottomRightRowLayout.qml  FlyViewInstrumentPanel.qml  FlyViewMap.qml  FlyViewToolStrip.qml  FlyViewToolStripActionList.qml  FlyViewTopRightColumnLayout.qml  FlyViewWidgetLayer.qml  GuidedActionConfirm.qml  GuidedActionRTL.qml  GuidedActionTakeoff.qml  TelemetryValuesBar.qml  TerrainProgress.qml  VehicleWarnings.qml
src/FlightMap/: FlightMap.qml
src/GPS/: CMakeLists.txt  GPSManager.cc  GPSProvider.cc  GPSProvider.h  definitions.h
src/Joystick/: JoystickAndroid.cc  JoystickManager.cc
src/MAVLink/: QGCMAVLink.cc  QGCMAVLink.h  SysStatusSensorInfo.cc
src/MissionManager/: BlankPlanCreator.cc  CMakeLists.txt  CorridorScanComplexItem.cc  GeoFenceController.cc  GeoFenceController.h  MissionCommandTree.cc  MissionController.cc  MissionController.h  MissionSettingsItem.cc  MissionSettingsItem.h  PlanMasterController.cc  PlanMasterController.h  SpotSprayingComplexItem.cc  SpotSprayingComplexItem.h  StructureScanComplexItem.cc  Survey.SettingsGroup.json  SurveyComplexItem.cc  SurveyComplexItem.h  SurveyPlanCreator.cc  TransectStyleComplexItem.cc  TransectStyleComplexItem.h
src/NewImages/: clock_time.json  loading_hands.json  loading_lottie.json
src/PlanView/: AirspaceRestrictionDialog.qml  CMakeLists.txt  CameraCalcCamera.qml  CameraCalcGrid.qml  CameraSection.qml  CorridorScanEditor.qml  CorridorScanMapVisual.qml  FWLandingPatternEditor.qml  FWLandingPatternMapVisual.qml  GeoFenceEditor.qml  GeoFenceMapVisuals.qml  MissionItemEditor.qml  MissionItemMapVisual.qml  MissionSettingsEditor.qml  MissionSettingsEditor_BACKUP_1508.qml  MissionSettingsEditor_BASE_1508.qml  MissionSettingsEditor_LOCAL_1508.qml  MissionSettingsEditor_REMOTE_1403.qml  PlanEditToolbar.qml  PlanToolBarIndicators.qml  PlanView.qml  PlanView_BACKUP_987.qml  PlanView_BASE_360.qml  SimpleItemEditor.qml  SimpleItemMapVisual.qml  SpotSprayingEditor.qml  SpotSprayingMapVisual.qml  StructureScanEditor.qml  StructureScanMapVisual.qml  SurveyItemEditor.qml  SurveyItemEditor_check.txt  TakeoffItemMapVisual.qml  TransectStyleComplexItemEditor.qml  TransectStyleComplexItemStats.qml  TransectStyleComplexItemTabBar.qml  TransectStyleComplexItemTerrainFollow.qml  TransectStyleMapVisuals.qml  VTOLLandingPatternEditor.qml  VTOLLandingPatternMapVisual.qml  __fix_survey2.py  (+1 more)
src/PositionManager/: PositionManager.cpp  PositionManager.h
src/QmlControls/: AltModeDialog.qml  CMakeLists.txt  EditPositionDialog.qml  FileButton.qml  HorizontalFactValueGrid.qml  InstrumentValueLabel.qml  InstrumentValueValue.qml  LabelledButton.qml  LabelledComboBox.qml  LabelledLabel.qml  MissionCommandDialog.qml  ParameterEditorDialog.qml  PipView.qml  QGCButton.qml  QGCCheckBox.qml  QGCCheckBoxSlider.qml  QGCComboBox.qml  QGCDynamicObjectManager.qml  QGCFileDialog.qml  QGCFileDialogController.cc  QGCFileDialog_BACKUP_208.qml  QGCFileDialog_BASE_260.qml  QGCFileDialog_LOCAL_208.qml  QGCFileDialog_REMOTE_208.qml  QGCLabel.qml  QGCMapLabel.qml  QGCMapPolyline.cc  QGCMenu.qml  QGCMenuItem.qml  QGCPalette.cc  QGCPalette.h  QGCPopupDialog.qml  QGCRadioButton.qml  QGCSimpleMessageDialog.qml  QGCSlider.qml  QGCTabBar.qml  QGCTabButton.qml  QGCTextField.qml  QGCToolBarButton.qml  QGroundControlQmlGlobal.cc  (+7 more)
src/QtLocationPlugin/: QGCTileCacheWorker.cpp  QGeoFileTileCacheQGC.h  QGeoMapReplyQGC.h  QGeoTileFetcherQGC.cpp  QGeoTileFetcherQGC.h  QGeoTiledMappingManagerEngineQGC.cpp
src/Settings/: App.SettingsGroup.json  AppSettings.h  FlightMap.SettingsGroup.json  FlyView.SettingsGroup.json  Maps.SettingsGroup.json  SettingsManager.cc  VideoSettings.cc
src/UI/: AppSettings.qml  CMakeLists.txt  MainRootWindow.qml  SettingsPagesModel.qml
src/UTMSP/: CMakeLists.txt  UTMSPActivationStatusBar.qml  UTMSPMapPolygonVisuals.qml  UTMSPMapVisuals.qml  UTMSPNetworkRemoteIDManager.cpp
src/UTMSP/dummy/: UTMSPActivationStatusBar.qml  UTMSPAdapterEditor.qml
src/Utilities/: JsonHelper.cc  JsonHelper.h  KMLHelper.cc  KMLHelper.h  ShapeFileHelper.cc
src/Vehicle/: MAVLinkLogManager.cc  MultiVehicleManager.cc  Vehicle.cc  Vehicle.h
src/VehicleSetup/: CMakeLists.txt  FirmwareUpgrade.qml
src/VideoManager/: CMakeLists.txt  (+1 more)
(+90 files in other folders)
